--- a/config-data/employeeservice.properties
+++ b/config-data/employeeservice.properties
@@ -1,4 +1,4 @@
 employeeservice.defaultFirstName=sooraj
 employeeservice.defaultLastName=mohan
 
-management.security.disabled=false
+management.security.enabled=false
