changed values in dev properties

--- a/config-data/employeeservice-dev.properties
+++ b/config-data/employeeservice-dev.properties
@@ -1,2 +1,5 @@
-employeeservice.defaultFirstName=devuser
+employeeservice.defaultFirstName=something
 employeeservice.defaultLastName=dev
+
+
+management.security.enabled=false
